--- a/cxone-work-item-form/cunard_form.css
+++ b/cxone-work-item-form/cunard_form.css
@@ -108,7 +108,7 @@ body {
     max-width: 1400px;
     margin: 0 auto;
     width: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* ============================================
@@ -209,7 +209,8 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    max-height: 80vh;
+    overflow: scroll;
 }
 
 .tabs-container {
