--- a/cxone-work-item-form/princess_form.css
+++ b/cxone-work-item-form/princess_form.css
@@ -147,7 +147,7 @@ body {
     max-width: 1800px;
     margin: 0 auto;
     width: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* ================================================
